--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@ai-sdk/openai": "^3.0.26",
     "@cloudflare/vite-plugin": "^1.13.8",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/sdk": "^0.43.0",
+    "@polar-sh/tanstack-start": "^0.4.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
